test/corpus/resource.txt
=====
Basic Resources
=====

[ResourceEmpty]

[ResourceCharacterLegsTexcoord]
type = Buffer
stride = 20
filename = LegsTexcoord.vb0

[ResourceCharacterLegsAIB]
type = Buffer
format = DXGI_FORMAT_R32_UINT
filename = LegsA.ib

[ResourceCharacterBlackRedADiffuse]
filename = 8.dds

[ResourceCreditInfo]
type = Buffer
data = "A string to be displayed on screen"

[ResourceWithPath]
filename = Buffer/somethingdumb withspaces and=sign.buf

[ResourceWithEqualinPath]
filename = HasAn = Sign/somefile.buf

---

(document
  (setting_section
    (setting_section_header
      (header_prefix)
      (header_identifier)))
  (setting_section
    (setting_section_header
      (header_prefix)
      (header_identifier))
    (setting_section_body
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (resource_type)))
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (numeric_constant)))
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (file_key_value)))))
  (setting_section
    (setting_section_header
      (header_prefix)
      (header_identifier))
    (setting_section_body
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (resource_type)))
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (resource_format)))
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (file_key_value)))))
  (setting_section
    (setting_section_header
      (header_prefix)
      (header_identifier))
    (setting_section_body
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (file_key_value)))))
  (setting_section
    (setting_section_header
      (header_prefix)
      (header_identifier))
    (setting_section_body
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (resource_type)))
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (string)))))
  (setting_section
    (setting_section_header
      (header_prefix)
      (header_identifier))
    (setting_section_body
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (path_key_value)))))
  (setting_section
    (setting_section_header
      (header_prefix)
      (header_identifier))
    (setting_section_body
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (path_key_value))))))

=====
Resource Array data
=====

[ResourceTopNotificationParams]
type = StructuredBuffer
array = 1
data = R32_FLOAT  -0.25 +0.90 +0.25 +0.80   1.00 1.00 1.00 1.00   0.00 0.00 0.00 0.80   0.02  0.05   2 1   1   1.0

---

(document
  (setting_section
    (setting_section_header
      (header_prefix)
      (header_identifier))
    (setting_section_body
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (resource_type)))
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (numeric_constant)))
      (setting_statement
        (setting_statement_key)
        (setting_statement_value
          (resource_data_array_expression
            (resource_format)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)
            (numeric_constant)))))))

====
Property Access
====

[CommandListCopyShapeKeyedPosition]
$input_position_stride = ResourceInput_ShapeKeyedPositions->SourceStride
$output_position_stride = ResourceOutput_ShapeKeyedPositions->SourceStride
$mesh_vertex_offset = 0
$mesh_vertex_count = ResourceInput_ShapeKeyedPositions->Size / $input_position_stride
if $mesh_vertex_count > 0
    run = CustomShaderShapeKeyedPositionCopier
endif

---

(document
  (commandlist_section
    (commandlist_section_header
      (header_prefix)
      (header_identifier))
    (commandlist_section_body
      (assignment_statement
        (named_variable
          (variable_identifier))
        (property_access_expression
          (custom_resource
            (resource_prefix)
            (section_identifier))
          (resource_property)))
      (assignment_statement
        (named_variable
          (variable_identifier))
        (property_access_expression
          (custom_resource
            (resource_prefix)
            (section_identifier))
          (resource_property)))
      (assignment_statement
        (named_variable
          (variable_identifier))
        (numeric_constant))
      (assignment_statement
        (named_variable
          (variable_identifier))
        (binary_expression
          (property_access_expression
            (custom_resource
              (resource_prefix)
              (section_identifier))
            (resource_property))
          (named_variable
            (variable_identifier))))
      (conditional_statement
        (if_statement
          (binary_expression
            (named_variable
              (variable_identifier))
            (numeric_constant))
          (block
            (run_instruction
              (instruction)
              (callable_customshader
                (callable_prefix)
                (section_identifier)))))))))